--- a/vibalist/templates/homepage.html
+++ b/vibalist/templates/homepage.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
 <html>
  <head>
  	<title>Request Form</title>
  </head>
 <body style="background-color:  #fff7e6">
 	<center>
-	<h1 style="color:#805500; font-family: courier; font-size: 50px;">Request Form</h1>
-	<h2 style="color:#4d3300; ">-ICT LESSON-</h2><hr>
+	<h1 style="color:#805500; font-family: sans-serif; font-size: 50px; background-color:  #f2ffcc">Request Form</h1>
+	<h2 style="color:#4d3300;font-family: courier;font-size: 30px; ">-ICT LESSON-</h2>
 
 <form class="form" action="" method="post">
   {% csrf_token %}
