--- a/vibalist/templates/Applicantlast.html
+++ b/vibalist/templates/Applicantlast.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tutoring.com</title>
+	<title>iTutor.Phil</title>
 <style>
 	*{ margin: 0px;
   padding: 0px;
@@ -71,7 +71,7 @@ nav p{
 		
 <body style="background: url('{% static 'Image/14.jpg' %}') no-repeat fixed; background-size: cover;">
 	<nav>	
-		<p> Tutoring.com </p>			
+		<p> iTutor.Phil </p>			
 	</nav>
 
 <form class="form" action="" method="POST">
