--- a/vibalist/templates/details.html
+++ b/vibalist/templates/details.html
@@ -82,8 +82,8 @@ nav p{
 
     <select id="grad" name="grad">
      <option value="" disabled selected>Choose your Teaching Environment</option>
-     <option value="1" id="Undergraduate" name="Undergraduate" onclick="showDiv ('1')" >Undergraduate</option>
-     <option value="2" id="Graduate Degree" name="Graduate Degree" onclick="showDiv ('2')">Graduate Degree</option>
+     <option value="Undergraduate" id="Undergraduate" name="Undergraduate" onclick="showDiv ('1')" >Undergraduate</option>
+     <option value="Graduate Degree" id="Graduate Degree" name="Graduate Degree" onclick="showDiv ('2')">Graduate Degree</option>
     
      
      </select>
