--- a/vibalist/templates/update.html
+++ b/vibalist/templates/update.html
@@ -1,6 +1,6 @@
 
 {% load static %}
-{% csrf_token %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -90,12 +90,6 @@ nav .wrapper {
 	font-weight: 400;
 	border-radius: 0px;
 }
-.div1 {
-  width: 500px;
-  height: 500px;
-  border: 2px solid green;
-  box-sizing: border-box;
-}
 
 @keyframes slider{
 	0%{
@@ -184,7 +178,7 @@ nav .wrapper {
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 </style> 
 </head>
-<body style="background: url('{% static 'Image/14.jpg' %}') no-repeat fixed; background-size: cover;">
+<body>
 
 	<nav>
 		<div class="wrapper">
@@ -197,31 +191,36 @@ nav .wrapper {
 			</ul>
 		</div>
 	</nav>
+<!-- <center><br><br><br><br><br><br>
+<p><b>Name:</b>{{display4.applicant}}</p><br>
+	<p><b>Lastname:</b>{{display4.last}}</p><br>
+	<p><b>Education Level:</b>{{display5.grad}}</p><br>
+	<p><b>Days Available:</b>{{display5.hayts}}</p><br>
+	<p><b>Time Available:</b>{{display5.avail}}</p><br>
+	<p><b>Hours Available:</b>{{display5.oras}}</p><br>
+	<p><b>Subject to Teach:</b>{{display5.teach}}<br><br><br> -->
 
-<center><br><br><br><br><br>
-	<p style="font-family: Patrick Hand;font-size: 18px;">Congratulations you are now officially enrolled in our program. Your tutor will contact you as soon as possible based on your schedule! Thank you and Godbless!</p><br>
+	<!-- <a class="delete" href="/delete/{{display5.id}}">Delete info</a> -->
 
-<div class="div1"><br>
-	<p style="font-family: Patrick Hand;font-size: 18px;"><b>Name: </b>{{display.Childname}}</p><br>
-	<p style="font-family: Patrick Hand;font-size: 18px;"><b>Hours: </b>{{display2.Quantity}} &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;    <b> Price: </b>{{display2.TOTAL}}</p><br>
-	<p style="font-family: Patrick Hand; font-size: 18px;"><b>Days: </b>{{display2.Quantity1}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    <b>Total: </b>{{display2.TOTAL2}}</p><br>
-	<p style="font-family: Patrick Hand;font-size: 18px;"><b>Payment Method: </b>{{display3.selectsss}}</p><br>
-	<p><b><u>DETAILS</b></u></p>
-	<p style="font-family: Patrick Hand;font-size: 18px;"><b>Date to start: </b>{{display1.Date}}</p><br>
-	<p style="font-family: Patrick Hand;font-size: 18px;"><b>Subject: </b>{{display1.Subject1}}</p><br>
-	<p style="font-family: Patrick Hand;font-size: 18px;"><b>Day: </b>{{display1.Schedule}}</p><br>
-	<p style="font-family: Patrick Hand;font-size: 18px;"><b>Time: </b>{{display1.Time}}</p><br>
-	<p style="font-family: Patrick Hand;font-size: 18px;"><b>Teaching Environment: </b>{{display1.select}}</p><br>
 
-	<button><a class="delete" style="text-decoration: none;" href="/delete/{{display1.id}}">Delete Details</a></button>
-	<button><a class="edit"  style="text-decoration: none;" href="/update/{{display1.id}}">Edit Details</a></button><br><br>
-	<button><p><a class="home" style="text-decoration: none;" href="{% url 'home' %}">Home</a></p></button>
 
+	<div class="row">
+  <div class="col-md-6">
+    <div class="card card-body">
+
+      <form action="" method="POST">
+      <center><br><br><br><br><br><br><br><br><br><br><br><br>
+ 				{% csrf_token %}
+        {{form}}
+        
+        <input type="submit" name="Submit"><br><br>
+
+       </center>
+      </form>
+
+    </div>
+  </div>
 </div>
-
-
-
-</center>
 
 
 </body>
